fix: allow the inset property on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -97,7 +97,7 @@
     align-items: center;
     justify-content: center;
   }
-  
+
   .overlayBg {
     position: absolute;
     display: flex;
@@ -110,14 +110,15 @@
   }
 }
 
-:host([onBackground]) { 
+:host([onBackground]) {
   .bannerWrapper {
     padding: var(--auro-size-xl);
   }
 }
 
-:host([inset]) { 
+:host([inset]) {
   .content {
+    padding: var(--auro-size-xl);
     @include auro_breakpoint--sm {
       padding: var(--auro-size-xxl);
     }
